# portfolio

./: .flake8  .pre-commit-config.yaml  .python-version  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
mysite/: views.py
src/portfolio/: __init__.py
static/: styles.css
templates/: about.html  base.html  index.html
