[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "masayasekine", email = "negirider250@gmail.com" }
]
dependencies = [
    "django>=4.2.5",
    "flake8>=5.0.4",
    "black>=23.9.1",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
